--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@
  */
 
 buildscript {
-	repositories { maven { url 'https://plugins.gradle.org/m2/' } }
+	repositories {
+		maven { url 'https://plugins.gradle.org/m2/' }
+	}
 
 	dependencies { classpath 'org.xtext:xtext-gradle-plugin:1.0.17' }
 }
@@ -37,7 +39,7 @@ apply plugin: 'maven'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
-description = 'MathRandom'
+description = 'MathMyDay library'
 group = 'togliu'
 version = '0.0.1-SNAPSHOT'
 
@@ -47,17 +49,13 @@ repositories {
 }
 
 dependencies {
-	compile 'org.apache.commons:commons-math3:3.6.1'
+	compile 'com.google.guava:guava:21.0'
 	compile 'org.eclipse.xtend:org.eclipse.xtend.lib:2.12.0'
 	testCompile 'org.assertj:assertj-core:3.8.0'
 	testCompile 'junit:junit:4.12'
 }
 
-uploadArchives {
-	repositories {
-		mavenLocal()
-	}
-}
+uploadArchives { repositories { mavenLocal() } }
 
 eclipse {
 	classpath {
