Tests: Xtend -> Groovy, JUnit -> Spock

--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,12 @@ buildscript {
 }
 
 apply plugin: 'org.xtext.xtend'
+apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
-description = 'MathRandom'
+description = 'MathRandom library'
 group = 'togliu'
 version = '0.0.1-SNAPSHOT'
 
@@ -49,14 +50,11 @@ repositories {
 dependencies {
 	compile 'com.google.guava:guava:22.0'
 	compile 'org.eclipse.xtend:org.eclipse.xtend.lib:2.12.0'
-	testCompile 'junit:junit:4.12'
+	testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
+	testCompile 'org.codehaus.groovy:groovy-all:2.4.3'
 }
 
-uploadArchives {
-	repositories {
-		mavenLocal()
-	}
-}
+uploadArchives { repositories { mavenLocal() } }
 
 eclipse {
 	classpath {
