--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ buildscript {
 }
 
 apply plugin: 'org.xtext.xtend'
+apply plugin: 'io.franzbecker.gradle-lombok'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
