--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ repositories {
 
 dependencies {
 	compile 'com.google.guava:guava:22.0'
+	compile 'org.apache.commons:commons-lang3:3.6'
 	compile 'org.eclipse.xtend:org.eclipse.xtend.lib:2.12.0'
 	testCompile 'org.assertj:assertj-core:3.8.0'
 	testCompile 'junit:junit:4.12'
