--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ buildscript {
 	dependencies { classpath 'org.xtext:xtext-gradle-plugin:1.0.17' }
 }
 
+apply plugin: 'java-library'
 apply plugin: 'org.xtext.xtend'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
@@ -44,9 +45,9 @@ version '1-SNAPSHOT'
 repositories { jcenter() }
 
 dependencies {
-	compile 'com.google.guava:guava:22.0'
-	compile 'org.apache.commons:commons-lang3:3.6'
-	compile 'org.eclipse.xtend:org.eclipse.xtend.lib:2.12.0'
+	api 'com.google.guava:guava:22.0'
+	api 'org.apache.commons:commons-lang3:3.6'
+	implementation 'org.eclipse.xtend:org.eclipse.xtend.lib:2.12.0'
 	testCompile 'org.assertj:assertj-core:3.8.0'
 	testCompile 'junit:junit:4.12'
 }
