--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	api 'com.google.guava:guava:22.0'
 	api 'org.apache.commons:commons-lang3:3.6'
 	implementation 'org.eclipse.xtend:org.eclipse.xtend.lib:2.12.0'
+	implementation 'org.slf4j:slf4j-api:1.7.25'
+	implementation 'org.slf4j:slf4j-simple:1.7.25'
 	testCompile 'org.assertj:assertj-core:3.8.0'
 	testCompile 'junit:junit:4.12'
 }
