--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,21 @@ dependencies {
 	testCompile 'junit:junit:4.12'
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+	classifier = 'sources'
+	from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+	classifier = 'javadoc'
+	from javadoc.destinationDir
+}
+
+artifacts {
+	archives sourcesJar
+	archives javadocJar
+}
+
 uploadArchives { repositories { mavenLocal() } }
 
 eclipse {
