--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 	testCompile 'junit:junit:4.12'
 }
 
+task wrapper(type: Wrapper) { gradleVersion = '4.1' }
+
 task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
     classifier = 'javadoc'
