--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,5 @@
 language: java
 
 install: gradle -b wrapper.gradle wrapper
-after_script: gradlew check install
+after_script: ./gradlew jacocoTestReport install
 
