--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,5 @@
 language: java
 install: gradle -b wrapper.gradle wrapper
 after_script: ./gradlew jacocoTestReport install deleteJavadoc copyJavadoc
+after_success: bash <(curl -s https://codecov.io/bash)
 
