--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@
 
 language: java
 install: gradle -b wrapper.gradle wrapper
-after_script: ./gradlew jacocoTestReport install deleteJavadoc copyJavadoc
-after_success: bash <(curl -s https://codecov.io/bash)
+after_script: - ./gradlew jacocoTestReport install deleteJavadoc copyJavadoc
+              - bash <(curl -s https://codecov.io/bash)
 
