--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@
 #
 
 language: java
-install: gradle -b wrapper.gradle wrapper
 after_script:
-              - ./gradlew jacocoTestReport htmlDependencyReport buildDashboard install
-              - ./gradlew deleteJavadoc deleteBuildDashboard copyJavadoc copyBuildDashboard
+              - mvn install
               - bash <(curl -s https://codecov.io/bash)
+
