--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@
 #
 
 language: java
+install: mvn clean
 after_script:
               - mvn install
               - bash <(curl -s https://codecov.io/bash)
