--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@
 language: java
 install: gradle -b wrapper.gradle wrapper
 after_script:
-    - ./gradlew jacocoTestReport htmlDependencyReport buildDashboard install
-    - ./gradlew deleteJavadoc deleteBuildDashboard copyJavadoc copyBuildDashboard
+    - mvn install site
     - bash <(curl -s https://codecov.io/bash)
+
