--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,17 @@
-/docs/ linguist-documentation
+docs/* linguist-documentation
+docs/css/* linguist-documentation
+docs/images/* linguist-documentation
+docs/images/logos/* linguist-documentation
+docs/finnmath-core/* linguist-documentation
+docs/finnmath-core/css/* linguist-documentation
+docs/finnmath-core/images/* linguist-documentation
+docs/finnmath-core/images/logos/* linguist-documentation
+docs/finnmath-core/css/* linguist-documentation
+docs/finnmath-core/apidocs/* linguist-documentation
+docs/finnmath-core/jacoco/* linguist-documentation
+docs/finnmath-kotlin/* linguist-documentation
+docs/finnmath-kotlin/css/* linguist-documentation
+docs/finnmath-kotlin/images/* linguist-documentation
+docs/finnmath-kotlin/images/logos/* linguist-documentation
+docs/finnmath-kotlin/apidocs/* linguist-documentation
+docs/finnmath-kotlin/jacoco/* linguist-documentation
