--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@
 # limitations under the License.
 #
 
-*.iml
-/.idea/
+**/.project
+**/.classpath
+**/.settings/
+**/*.iml
+**/.idea/
 **/target/
 
